--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Project for hackaton Platzi Master 2020, masterpath",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "standard",
+    "lint-fix": "standard --fix",
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "repository": {
     "type": "git",
