--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "standard": "^16.0.3"
   },
   "dependencies": {
+    "@hapi/boom": "^9.1.1",
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
